<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_economic"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_warning"
        style="@style/tv_size_15_color_22_style"
        android:layout_marginBottom="@dimen/spacing_17"
        android:layout_marginTop="@dimen/spacing_20"
        android:text="@string/warning_matching_center"/>

    <LinearLayout
        style="@style/Layout_Match_Wrap"
        android:layout_marginBottom="@dimen/spacing_11"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            style="@style/tv_size_15_color_22_style"
            android:layout_width="120dp"
            android:layout_height="34dp"
            android:background="@drawable/shape_bg_btn_border_blue"
            android:gravity="center"
            android:text="@string/around_goods"
            />

        <TextView
            android:id="@+id/tv_right"
            style="@style/tv_size_15_color_white_style"
            android:layout_width="120dp"
            android:layout_height="34dp"
            android:layout_marginLeft="@dimen/spacing_24"
            android:background="@drawable/selector_btn_corner_blue"
            android:gravity="center"
            android:text="@string/matching_center"/>
    </LinearLayout>
</LinearLayout>