<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_bg_dialog_usual_city"
              android:orientation="vertical">


    <TextView
        android:id="@+id/tv_option_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:gravity="center"
        android:text="@string/add_usual_city"
        android:textColor="@color/text_color_222222"
        android:textSize="@dimen/text_size17"/>

    <TextView
        android:id="@+id/tv_option_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_12"
        android:layout_marginLeft="@dimen/spacing_22"
        android:layout_marginRight="@dimen/spacing_22"
        android:layout_marginTop="@dimen/spacing_12"
        android:gravity="center"
        android:text="@string/add_usual_city_warning"
        android:textColor="#999999"
        android:textSize="@dimen/text_size12"/>


    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/parting_line_heigth"
        android:background="@color/parding_line"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:background="@color/common_background"
        tools:listitem="@layout/listitem_usual_city_dialog">
    </android.support.v7.widget.RecyclerView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/parting_line_heigth"
        android:background="@color/parding_line"/>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_city"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/selector_usual_city_dialog_leftbtn_bg"
            android:text="@string/add_city"
            android:textColor="@drawable/selector_usual_city_dialog_leftbtn_text_color"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/selector_usual_city_dialog_rightbtn_bg"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18dp"/>
    </LinearLayout>
</LinearLayout>