<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        style="@style/Layout_Match_Wrap"
        android:layout_marginLeft="@dimen/spacing_12"
        android:layout_marginRight="@dimen/spacing_12"
        android:layout_marginTop="@dimen/spacing_12"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_depart_address"
                style="@style/tv_size_17_color_22_style"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="上海市 徐汇区"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_6"
                android:layout_marginRight="@dimen/spacing_6"
                android:layout_marginTop="@dimen/spacing_5"
                android:background="@drawable/order_list_icon_blueline"/>

            <TextView
                android:id="@+id/tv_destination_address"
                style="@style/tv_size_17_color_22_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.44"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="上海市 徐汇区"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_time"
            style="@style/tv_size_12_color_96_style"
            android:text="1小时前"/>
    </LinearLayout>

    <LinearLayout
        style="@style/Layout_Match_Wrap"
        android:layout_marginBottom="@dimen/spacing_10"
        android:layout_marginLeft="@dimen/spacing_12"
        android:layout_marginTop="@dimen/spacing_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/Point_MyOrder_Style"/>

        <TextView
            android:id="@+id/tv_truck_info"
            style="@style/tv_size_13_color_66_style"
            android:text="普货30-50平方  10-18米高栏"/>
    </LinearLayout>

    <include layout="@layout/include_line_dd_full"/>

    <LinearLayout
        style="@style/Layout_Match_Wrap"
        android:layout_marginBottom="@dimen/spacing_10"
        android:layout_marginLeft="@dimen/spacing_12"
        android:layout_marginRight="@dimen/spacing_12"
        android:layout_marginTop="@dimen/spacing_10"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_btn_order"
            style="@style/tv_size_14_color_22_style"
            android:background="@drawable/shape_bg_empty_r4"
            android:paddingBottom="@dimen/spacing_4"
            android:paddingLeft="@dimen/spacing_25"
            android:paddingRight="@dimen/spacing_25"
            android:paddingTop="@dimen/spacing_4"
            android:text="@string/orders"/>

        <TextView
            android:id="@+id/tv_btn_undo_quote"
            style="@style/tv_size_14_color_22_style"
            android:layout_marginLeft="@dimen/spacing_16"
            android:background="@drawable/shape_bg_empty_r4"
            android:paddingBottom="@dimen/spacing_4"
            android:paddingLeft="@dimen/spacing_12"
            android:paddingRight="@dimen/spacing_12"
            android:paddingTop="@dimen/spacing_4"
            android:text="@string/undo_quote"/>

        <TextView
            android:id="@+id/tv_btn_update_quote"
            style="@style/tv_size_14_color_22_style"
            android:layout_marginLeft="@dimen/spacing_16"
            android:background="@drawable/shape_bg_empty_r4"
            android:paddingBottom="@dimen/spacing_4"
            android:paddingLeft="@dimen/spacing_12"
            android:paddingRight="@dimen/spacing_12"
            android:paddingTop="@dimen/spacing_4"
            android:text="@string/update_quote"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_8"
        android:background="@color/common_background"/>

</LinearLayout>